# kaggle-nemotron-challenge

./: .env.example  .gitignore  README.md  REPO_LAYOUT.md  main.py  pyproject.toml
configs/: default.yaml
experiments/: 2026-03-28_baseline-v1.md  README.md  baseline-v1.md  main.md
notebooks/: kaggle_e2e.ipynb  kernel-metadata.json
offline_packages/: README.md  dataset-metadata.json  requirements.txt
scripts/: download_data.py  evaluate.py  explore_data.py  new_experiment.py  package.py  train.py
social/: 2026-03-31_baseline-v1.md
src/: data.py  eval_utils.py  prompts.py  utils.py
